--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "simple-zustand-devtools": "^1.0.1",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zustand": "^3.5.10"
   },
   "scripts": {
     "start": "react-scripts start",
